samples/_failures_safe/1761668926_fff249_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f66e1a6.c: In function ‘next_token’:
./samples/SAFE/__tmp_1f66e1a6.c:167:17: error: expected identifier at end of input
  167 |                 lexer->
      |                 ^~~~~
./samples/SAFE/__tmp_1f66e1a6.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f66e1a6.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f66e1a6.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f66e1a6.c:167:17: error: expected declaration or statement at end of input
